# droplegen

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/features/: control-panel.md  data-logging.md  monitoring.md  pipelines.md
docs/guide/: architecture.md  configuration.md  getting-started.md
docs/reference/: makefile.md  release.md
src/droplegen/: __init__.py  __main__.py  app.py  config.py  controller.py  utils.py
src/droplegen/backend/: acquisition.py  channel_manager.py  hardware_manager.py  sdk_wrapper.py
src/droplegen/logger/: csv_logger.py
src/droplegen/pipeline/: engine.py  steps.py  triggers.py
src/droplegen/ui/: log_viewer.py  main_window.py
src/droplegen/ui/panels/: control_panel.py  monitor_panel.py  pipeline_panel.py  plot_panel.py
tests/unit/: test_config.py  test_controller.py  test_triggers.py
