[project]
name = "droplegen"
version = "0.2.0"
description = "Fluigent Drop-Seq microfluidics control application"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.5",
    "setuptools<71",
    "pyqtgraph>=0.13",
    "pandas>=2.2",
]

[project.scripts]
droplegen = "droplegen.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "pandas>=2.2",
]

[tool.ruff]
exclude = ["fgt-SDK", "aria-sdk"]

[tool.uv]
python-preference = "only-managed"
